@@ -152,7 +152,7 @@ class Cto24HAction extends OnChangePropertyBaseAction{
         BigDecimal ccJ14 = (BigDecimal)getView().getValue("ccJ14")
         BigDecimal ccJ15 = (BigDecimal)getView().getValue("ccJ15")
         if (diaTrabajoId)
-            getView().setValue("ccJ14", SqlUtil.instance.getPromedio(diaTrabajoId, "Jugo", "jeBri"))
+            getView().setValue("ccJ14", SqlUtil.instance.getValorCampo(diaTrabajoId, "Jugo", "jeBri"))
         if (ccJ12 && ccJ13)
             getView().setValue("ccJ16", calcC20 (ccJ12, ccJ13) )
         BigDecimal ccJ16 = (BigDecimal)getView().getValue("ccJ16")
@@ -173,7 +173,7 @@ class Cto24HAction extends OnChangePropertyBaseAction{
         BigDecimal ccJd4 = (BigDecimal)getView().getValue("ccJd4")
         BigDecimal ccJd5 = (BigDecimal)getView().getValue("ccJd5")
         if (diaTrabajoId)
-            getView().setValue("ccJd4", SqlUtil.instance.getPromedio(diaTrabajoId, "Jugo", "jdBri"))
+            getView().setValue("ccJd4", SqlUtil.instance.getValorCampo(diaTrabajoId, "Jugo", "jdBri"))
         if (ccJd2 && ccJd3)
             getView().setValue("ccJd6", calcC20 (ccJd2, ccJd3) )
         BigDecimal ccJd6 = (BigDecimal)getView().getValue("ccJd6")
@@ -194,7 +194,7 @@ class Cto24HAction extends OnChangePropertyBaseAction{
         BigDecimal ccJc4 = (BigDecimal)getView().getValue("ccJc4")
         BigDecimal ccJc5 = (BigDecimal)getView().getValue("ccJc5")
         if (diaTrabajoId)
-            getView().setValue("ccJc4", SqlUtil.instance.getPromedio(diaTrabajoId, "Jugo", "jcBri"))
+            getView().setValue("ccJc4", SqlUtil.instance.getValorCampo(diaTrabajoId, "Jugo", "jcBri"))
         if (ccJc2 && ccJc3)
             getView().setValue("ccJc6", calcC20 (ccJc2, ccJc3) )
         BigDecimal ccJc6 = (BigDecimal)getView().getValue("ccJc6")
@@ -215,7 +215,7 @@ class Cto24HAction extends OnChangePropertyBaseAction{
         BigDecimal ccJf4 = (BigDecimal)getView().getValue("ccJf4")
         BigDecimal ccJf5 = (BigDecimal)getView().getValue("ccJf5")
         if (diaTrabajoId)
-            getView().setValue("ccJf4", SqlUtil.instance.getPromedio(diaTrabajoId, "Jugo", "jfBri"))
+            getView().setValue("ccJf4", SqlUtil.instance.getValorCampo(diaTrabajoId, "Jugo", "jfBri"))
         if (ccJf2 && ccJf3)
             getView().setValue("ccJf6", calcC20 (ccJf2, ccJf3) )
         BigDecimal ccJf6 = (BigDecimal)getView().getValue("ccJf6")
@@ -236,7 +236,7 @@ class Cto24HAction extends OnChangePropertyBaseAction{
         BigDecimal ccMc4 = (BigDecimal)getView().getValue("ccMc4")
         BigDecimal ccMc5 = (BigDecimal)getView().getValue("ccMc5")
         if (diaTrabajoId)
-            getView().setValue("ccMc4", SqlUtil.instance.getPromedio(diaTrabajoId, "Meladura", "mclBri2"))
+            getView().setValue("ccMc4", SqlUtil.instance.getValorCampo(diaTrabajoId, "Meladura", "mclBri2"))
         if (ccMc2 && ccMc3)
             getView().setValue("ccMc6", calcC20 (ccMc2, ccMc3) )
         BigDecimal ccMc6 = (BigDecimal)getView().getValue("ccMc6")
@@ -257,7 +257,7 @@ class Cto24HAction extends OnChangePropertyBaseAction{
         BigDecimal ccMa4 = (BigDecimal)getView().getValue("ccMa4")
         BigDecimal ccMa5 = (BigDecimal)getView().getValue("ccMa5")
         if (diaTrabajoId)
-            getView().setValue("ccMa4", SqlUtil.instance.getPromedio(diaTrabajoId, "Mieles", "maBri2"))
+            getView().setValue("ccMa4", SqlUtil.instance.getValorCampo(diaTrabajoId, "Mieles", "maBri2"))
         if (ccMa2 && ccMa3)
             getView().setValue("ccMa6", calcC20 (ccMa2, ccMa3) )
         BigDecimal ccMa6 = (BigDecimal)getView().getValue("ccMa6")
@@ -278,7 +278,7 @@ class Cto24HAction extends OnChangePropertyBaseAction{
         BigDecimal ccMb4 = (BigDecimal)getView().getValue("ccMb4")
         BigDecimal ccMb5 = (BigDecimal)getView().getValue("ccMb5")
         if (diaTrabajoId)
-            getView().setValue("ccMb4", SqlUtil.instance.getPromedio(diaTrabajoId, "Mieles", "mbBri2"))
+            getView().setValue("ccMb4", SqlUtil.instance.getValorCampo(diaTrabajoId, "Mieles", "mbBri2"))
         if (ccMb2 && ccMb3)
             getView().setValue("ccMb6", calcC20 (ccMb2, ccMb3) )
         BigDecimal ccMb6 = (BigDecimal)getView().getValue("ccMb6")
@@ -299,7 +299,7 @@ class Cto24HAction extends OnChangePropertyBaseAction{
         BigDecimal ccMf4 = (BigDecimal)getView().getValue("ccMf4")
         BigDecimal ccMf5 = (BigDecimal)getView().getValue("ccMf5")
         if (diaTrabajoId)
-            getView().setValue("ccMf4", SqlUtil.instance.getPromedio(diaTrabajoId, "Mieles", "mfBri2"))
+            getView().setValue("ccMf4", SqlUtil.instance.getValorCampo(diaTrabajoId, "Mieles", "mfBri2"))
         if (ccMf2 && ccMf3)
             getView().setValue("ccMf6", calcC20 (ccMf2, ccMf3) )
         BigDecimal ccMf6 = (BigDecimal)getView().getValue("ccMf6")
