@@ -1,7 +1,7 @@
 package ec.carper.ingenio.actions
 
 import ec.carper.ingenio.model.*
-import ec.carper.ingenio.util.Calculo
+import ec.carper.ingenio.util.*
 
 import java.sql.Timestamp
 import org.openxava.actions.*
@@ -10,6 +10,10 @@ class JugoDetalleAction extends OnChangePropertyBaseAction{
 
     void execute() throws Exception{
 
+        def diaTrabajo = SqlUtil.instance.getDiaTrabajo(getView().getRoot().getValue("diaTrabajo.id"))
+        String horaS = (String)getView().getValue("horaS")
+        if (horaS)
+            getView().setValue("hora", Util.instance.toTimestamp(horaS, diaTrabajo.fecha)) 
         BigDecimal jeBri = (BigDecimal)getView().getValue("jeBri")
         BigDecimal jePol = (BigDecimal)getView().getValue("jePol")
         if (jeBri && jePol)
