@@ -1,0 +1,8 @@
+package ec.carper.ingenio.test
+
+@Singleton
+class Aux{
+    def getDiaTrabajoId() {
+        return "ff80808172a5ebad0172c9078f1e0001"
+    }
+}
