@@ -1,3 +1,10 @@
+2020-07-01 
+	Ajuste de hora en Bagazo +ingenio
+
+2020-06-29 
+	Ajuste de hora en Jugo +ingenio
+	Clase con datos generales para pruebas +ingenio
+
 2020-06-26
 	Crear tarea para generar war sin libs
 
